<resources>
    <string name="app_name">Corona Tracker</string>
    <string name="backbutton">BackButton</string>
    <string name="precautions">PRECAUTIONS</string>
    <string name="welcomscreen">WelcomScreen</string>
    <string name="covidlogo">CovidLogo</string>
    <string name="cured">Cured</string>
    <string name="deceased">Deceased</string>
    <string name="state_reports">State Reports</string>
    <string name="click_on_the_states_to_view_district_wise_data">Click on the states to view District wise data</string>
    <string name="recovered">Recovered</string>
    <string name="new_cases">New Cases</string>
    <string name="confirmed">Confirmed</string>
</resources>
