<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/background1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


       <androidx.cardview.widget.CardView
           android:id="@+id/cardView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="15dp"
           android:layout_marginTop="10dp"
           android:layout_marginEnd="15dp"
           app:cardBackgroundColor="#303030"
           app:cardCornerRadius="24dp"
           app:cardElevation="15dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent">

          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_height="535dp"
              android:background="@drawable/indiaflagmap"

              >


             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="149dp"
                 android:layout_height="126dp"

                 android:layout_marginTop="24dp"

                 android:src="@drawable/covidlogo"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.068"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:contentDescription="@string/covidlogo" />

             <ImageView
                 android:id="@+id/textView"
                 android:layout_width="112dp"
                 android:layout_height="72dp"

                 android:layout_marginTop="36dp"
                 android:src="@drawable/indianlogo22"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.346"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toTopOf="parent" />

             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="56dp"
                 android:drawableEnd="@drawable/ic_dot_blue"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="@string/confirmed"

                 android:textColor="#ffb300"
                 android:textSize="24sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView" />

             <TextView
                 android:id="@+id/tvConfirmed111"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
                 android:fontFamily="@font/helvetica"
                 android:textColor="#FAFBFB"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView3"
                 app:layout_constraintEnd_toStartOf="@+id/textView3"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/textView3"
                 app:layout_constraintTop_toTopOf="@+id/textView3"
                 tools:text="81,008" />

             <TextView
                 android:id="@+id/tvCured"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="52dp"
                 android:fontFamily="@font/helvetica"
                 android:textColor="#FAFBFB"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView2"
                 app:layout_constraintEnd_toStartOf="@+id/textView2"
                 app:layout_constraintHorizontal_bias="0.029"
                 app:layout_constraintStart_toEndOf="@+id/textView2"
                 app:layout_constraintTop_toTopOf="@+id/textView2"
                 tools:text="81,008" />

             <TextView
                 android:id="@+id/tvDeaths"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="44dp"
                 android:fontFamily="@font/helvetica"
                 android:textColor="#FAFBFB"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView7"
                 app:layout_constraintEnd_toStartOf="@+id/textView7"
                 app:layout_constraintHorizontal_bias="0.003"
                 app:layout_constraintStart_toEndOf="@+id/textView7"
                 app:layout_constraintTop_toTopOf="@+id/textView7"
                 app:layout_constraintVertical_bias="0.596"
                 tools:text="81,008" />

             <TextView
                 android:id="@+id/tvDeltacnfm_Dist123"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="44dp"
                 android:fontFamily="@font/helvetica"
                 android:textColor="#F85977"
                 android:textSize="21sp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView10"
                 app:layout_constraintEnd_toStartOf="@+id/textView10"
                 app:layout_constraintHorizontal_bias="0.003"
                 app:layout_constraintStart_toEndOf="@+id/textView10"
                 app:layout_constraintTop_toTopOf="@+id/textView10"
                 app:layout_constraintVertical_bias="1.0"
                 tools:text="81,008" />

             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="20dp"
                 android:drawableEnd="@drawable/ic_dot_green"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="@string/cured"
                 android:textColor="#22A924"
                 android:textSize="24sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView3" />

             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="20dp"
                 android:drawableEnd="@drawable/ic_dot_red"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="@string/deceased"
                 android:textColor="@color/red"
                 android:textSize="24sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2" />

             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="20dp"
                 android:drawableEnd="@drawable/ic_dot_blue"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="@string/new_cases"
                 android:textColor="#F87C73"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView7" />

             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="68dp"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="@string/state_reports"
                 android:textColor="#FF9800"
                 android:textSize="22sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView7" />

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/comfortaa"
                 android:text="@string/click_on_the_states_to_view_district_wise_data"
                 android:textColor="@color/white"

                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView8" />


          </androidx.constraintlayout.widget.ConstraintLayout>


       </androidx.cardview.widget.CardView>


       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/recyclerview1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:nestedScrollingEnabled="true"
            />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>
